--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Galaxy</title>
     <link rel='stylesheet', href="styles.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T5QCB1PWEV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-T5QCB1PWEV');
+    </script>
 </head>
 <body>
     <nav>
